Panelizer 7.x-3.x-dev, xxxx-xx-xx
---------------------------------
#2762351 by DamienMcKenna: Skip update 7300 if there are no records to process.
By dsnopek, japerry, mpotter, DamienMcKenna: Add support for the new Panels
  Storage API.


Panelizer 7.x-3.2, 2016-06-30
-----------------------------
#2416977 by Andrew M Riley: Confirm Navigation: Leave this Page (IPE w/
  Revisions).
#2419311 by naxoc: Update 7115 caused double-serialized values to saved.
#2311453 by DamienMcKenna, drupalninja: Redirect IPE to normal 'revert' page to
  revert the display.
#2366209 by DamienMcKenna: Option for one view mode to use another view mode's
   display.
#2375563 by DamienMcKenna: Clone attached FPPs when a node is cloned.
#2361425 by hctom: Support for taxonomy revisions.
#2416505 by dsnopek: Allow indexing content from 'Full page override' with
  Search API.
#1982654 by hefox, DamienMcKenna, mglaman: Repeatedly asked to confirm when
  trying to save a default for a node type.
#2192863 by niko-, mrjmd, mglaman, DamienMcKenna: Don't load displays for
  disabled view modes.
#2416405 by cmonnow, DamienMcKenna: Improved logic in hook_entity_insert().
#2266393 by DamienMcKenna: Give a warning message if update 7106 fails due to
  multiple records for the same entity view mode.
#2435003 by EclipseGc, DamienMcKenna: Add hook_panelizer_access() to allow each
  operation's permissions to be extended.
#2283769 by frankcarey, guillaumev, DamienMcKenna: Use standard permissions to
  control IPE access.
#2445769 by DamienMcKenna: Unable to clone displays.
#2451643 by DamienMcKenna: Reworked logic controlling when warning messages are
  displayed about page_manager needing to be enabled.
#2457711 by DamienMcKenna: 'content' local tasks should have been default.
#2465333 by EclipseGc: Add hook_panelizer_access_alter() for the new
  hook_panelizer_access().
#2462315 by DamienMcKenna: Fix update 7115 and regressions caused by it.